asset/css/style.css
/* ---------------------------
        Font Import
---------------------------- */

@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap');

/* ---------------------------
        Default Code
---------------------------- */
*,
*::before,
*::after {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    text-decoration: none;
}

html,
body {
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    background: #ffffff50;
}

img {
    width: 100%;
    height: auto;
}

/* ---------------------------
        Common Class
---------------------------- */

.container {
    width: 90%;
    margin: 0 auto;
}

.black1-link {
    color: #3a3a3a;
    transition: color .3s;
}

.common-anchor {
    display: inline-block;
    color: #fff;
    padding: 1% 2%;
    background: #E02C6D;
    font-weight: bold;
}

.common-anchor:hover {
    background: #f74d8b;
    transition: background .2s ease-in-out;
}

.fontSize52 {
    font-size: var(--52px);
}

.fontSize28 {
    font-size: var(--28px);
}

.marginX20 {
    margin: auto var(--20px);
}

.marginY20 {
    margin: var(--20px) auto;
}

.marginX30 {
    margin: auto var(--30px);
}

.marginY30 {
    margin: var(--30px) auto;
}

.marginX50 {
    margin: 0 var(--50px);
}

.marginY50 {
    margin: var(--50px) auto;
}

.F-familyRoboto {
    font-family: 'Roboto', sans-serif;
}

.F-familyInter {
    font-family: 'Inter', sans-serif;
}

.fw-medium {
    font-weight: 500;
}

.fw-regular {
    font-weight: 400;
}

.fw-bold {
    font-weight: bold;
}

.fw-semibold {
    font-weight: 600;
}

.text-align-center {
    text-align: center;
}

/* ---------------------------
        Vriable Value
---------------------------- */

:root {
    --52px: 3.25em;
    --20px: 1.25em;
    --30px: 1.875em;
    --50px: 3.125em;
    --28px: 1.75em;
    --lowlightgrey: #DDE4EB;
}

/* ---------------------------
        Hover Style
---------------------------- */

.navbar-list-link a:hover.black1-link {
    color: #7c7c7c;
}

/* ---------------------------
        Navbar Style
---------------------------- */

.navbar {
    display: flex;
    justify-content: space-between;
    margin: 50px auto auto;
}

.navbar p {
    font-weight: 560;
}

.navbar-list-link a {
    margin: 0 5px;
    font-weight: 600;
}

/* ---------------------------
        Header Content
---------------------------- */

.header-content {
    display: flex;
    justify-content: space-between;
    margin: 50px auto auto;
    align-items: center;
}

.header-text p {
    font-weight: 600;
}

.header-content .common-anchor {
    border-radius: 100px;
}

/* ---------------------------
      Online Brand Market
---------------------------- */

.online-brand-market {
    text-align: center;
    padding: 25px;
    border-top: 1px solid var(--lowlightgrey);
    border-bottom: 1px solid var(--lowlightgrey);
}

.online-brand-market img {
    max-width: 60px;
}

/* ---------------------------
  Products Collection Layout
---------------------------- */

.product-layout {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 30px;
}

.product-box {
    background: #fff;
    box-shadow: 0px 0px 15px -10px;
    padding: 20px;
}

.product-box h5 {
    color: #6d6d94;
    font-weight: bold;
}

.fa-star,
.fa-star-half-stroke.filed-star.filed-star {
    color: #FB8200;
}

.product-layout+p {
    text-align: right;
}

.product-layout+p>a {
    color: #E02C6D;
}

/* ---------------------------
        Feature Area
---------------------------- */

.features {
    display: flex;
    gap: 6.25rem;
    align-items: center;
    padding: 0 2%;
}

.features-text {
    width: 50%;
}

.features-text h1 {
    font-size: 2.375rem;
}

.features-text p {
    color: #6c6c6c;
    font-weight: bold;
    margin: 10px auto;
}

/* ---------------------------
        Footer Area
---------------------------- */

footer {
    background: #0A0826;
    color: #D9DBE1;
    text-align: center;
    padding: 3%;
    margin: 7% auto 0;
}

footer a {
    display: inline-block;
    color: var(--lowlightgrey);
    font-size: 1.25rem;
    background: #ffffff10;
    border-radius: 50%;
    padding: .1875rem .5rem;
    margin: 1% 0.5%;
}

footer p {
    font-family: 'Manrope', sans-serif;
    font-weight: bold;
}

.fa-instagram:hover {
    background: linear-gradient(45deg,
            #f09433 0%,
            #e6683c 25%,
            #dc2743 50%,
            #cc2366 75%,
            #bc1888 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    transition: all .3s ease-in-out;
}

.fa-dribbble:hover {
    background: #E74D89;
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    transition: all .3s ease-in-out;
}

.fa-twitter:hover {
    color: #00acee;
    transition: all .3s ease-in-out;
}

.fa-youtube:hover {
    color: #ee1717;
    transition: all .3s ease-in-out;
}

